Update test page

--- a/test/test.html
+++ b/test/test.html
@@ -6,7 +6,7 @@
     <style>
         table {
             width: 100%;
-            border: 1px solid #ddd;
+            border: 1px solid #0d11ba;
         }
 
         thead {
@@ -39,7 +39,7 @@
             gripInnerHtml: "<div class='grip'></div>",
             draggingClass: "dragging",
             resizeMode: 'overflow',
-            widths: [275, 350, 500]
+            widths: [275, 100, 500]
         });
       }
     </script>
