--- a/test/sample1.html
+++ b/test/sample1.html
@@ -20,11 +20,11 @@
     expect = chai.expect;
     mocha.setup('bdd');
 
-    describe('extend remote table', () => {
+    describe('Extend remote table', () => {
 
         it('should assign the remote table', () => {
             const table = document.querySelector('#parent-resizable');
-            const resizer = new ColumnResizer(table);
+            const resizer = new window.ColumnResizer.default(table);
             const headers = resizer.getTableHeaders(table);
             const remote = document.querySelector('#parent-resizableremote');
             resizer.extendRemoteTable(remote, headers, table);
@@ -32,7 +32,7 @@
         });
         it('should set the remote id', () => {
             const table = document.querySelector('#parent-resizable');
-            const resizer = new ColumnResizer(table);
+            const resizer = new window.ColumnResizer.default(table);
             const headers = resizer.getTableHeaders(table);
             const remote = document.querySelector('#parent-resizableremote');
             resizer.extendRemoteTable(remote, headers, table);
@@ -40,7 +40,7 @@
         });
         it('should set the columns to match the headers', () => {
             const table = document.querySelector('#parent-resizable');
-            const resizer = new ColumnResizer(table);
+            const resizer = new window.ColumnResizer.default(table);
             const headers = resizer.getTableHeaders(table);
             const remote = document.querySelector('#parent-resizableremote');
             resizer.extendRemoteTable(remote, headers, table);
@@ -48,7 +48,7 @@
         });
         it('should set the style', () => {
             const table = document.querySelector('#parent-resizable');
-            const resizer = new ColumnResizer(table);
+            const resizer = new window.ColumnResizer.default(table);
             const headers = resizer.getTableHeaders(table);
             const remote = document.querySelector('#parent-resizableremote');
             resizer.extendRemoteTable(remote, headers, table);
@@ -58,7 +58,7 @@
         });
         it('should set up the column group', () => {
             const table = document.querySelector('#parent-resizable');
-            const resizer = new ColumnResizer(table);
+            const resizer = new window.ColumnResizer.default(table);
             const headers = resizer.getTableHeaders(table);
             const remote = document.querySelector('#parent-resizableremote');
             resizer.extendRemoteTable(remote, headers, table);
@@ -69,13 +69,13 @@
     describe('Get Headers', () => {
         it('should find the headers', () => {
             const table = document.querySelector('#parent-resizable');
-            const resizer = new ColumnResizer(table, {disable: true});
+            const resizer = new window.ColumnResizer.default(table, {disable: true});
             const headers = resizer.getTableHeaders(table);
             expect(headers.length).to.equal(5);
         });
         it('should find the remote headers', () => {
             const table = document.querySelector('#parent-resizable');
-            const resizer = new ColumnResizer(table, {disable: true});
+            const resizer = new window.ColumnResizer.default(table, {disable: true});
             const remote = document.querySelector('#parent-resizableremote');
             const headers = resizer.getTableHeaders(remote);
             expect(headers.length).to.equal(5);
